--- a/css/style.css
+++ b/css/style.css
@@ -104,4 +104,17 @@ body{
     border-radius: 10px;
 }
 
+.footer{
+    padding: 0.5rem;
+    display: flex;
+    background-color: rgb(32, 32, 32);
+    justify-content: center;
+    align-items: center;
+}
+
+.footer>a{
+    color: white;
+    text-decoration: none;
+}
+
 
