--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body{
 .principal{
     display: flex;
     color: white;
-    background-image: linear-gradient(rgba(5, 7, 12,0.75), rgba(5, 7, 12,0.75)), url('../img/cine.png');
+    background-image: linear-gradient(rgba(5, 7, 12,0.75), rgba(5, 7, 12,0.75)), url('../img/cine2.png');
     background-repeat: no-repeat;
     background-size: cover;
     height: 100vh;
