--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,10 @@ body{
     align-items: center;
 }
 
+.time>h4{
+    font-size: 1rem;
+}
+
 /*NUMERITOS CENTRADOS*/
 .dias, .horas, .minutos, .segundos{
     display: flex;
