--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,14 @@
+html{
+    width: 100%;
+    overflow-x: hidden;
+    background-color:rgb(32, 32, 32);;
+}
+
 body{
     width: 100%;
     overflow-x: hidden;
     margin: 0;
-    font-family: "Montserrat", sans-serif;
+    font-family: "STIX Two Text", serif;
     font-optical-sizing: auto;
     font-weight: weight;
     font-style: normal;
@@ -10,37 +16,62 @@ body{
 .principal{
     display: flex;
     color: white;
-    background-image: linear-gradient(rgba(5, 7, 12,0.75), rgba(5, 7, 12,0.75)), url('../img/cine2.png');
+    background-image: linear-gradient(rgba(44, 45, 48, 0.75), rgba(5, 7, 12,0.75)), url('../img/alfombr-blur.png');
     background-repeat: no-repeat;
     background-size: cover;
-    height: 100vh;
+    background-position: center;
+    min-height: 100vh;
     flex-direction: column;
     justify-content: center;
+
+    align-items: center; /* Centra horizontalmente */
+    justify-content: center; /* Centra verticalmente */
+
+
+}
+
+.claqueta {
+    width: 15rem;
+    
+}
+
+.principal>p{
+    padding: 0 5rem 0 5rem;
 }
 
 .titulo{
     padding: 2rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 5rem;
+    text-align: center;
+    font-size: 4rem;
+    font-weight: 700;
 }
 
-.subti{
-    display: flex;
-    justify-content: center;
+h3{
+    /*EL TAMAÑO ESTA MAS ABAJO*/
+    text-align: center;
+    font-weight: 700;
+}
+
+.fecha>h3, .donde>h3, .regalo>h3, .dresscode>h3, .confirmar-asistencia>h3, .que-musica-te-gusta>h3{
+    font-size: 2rem;
 }
 
 /*CAJA DE CUENTA REGRESIVA CENTRADA EN X*/
 .cuenta-regresiva{
     padding: 2rem;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
+    gap: 2rem; /* Agrega espacio entre los elementos */
+
 }
 
 .time>h4{
     font-size: 1rem;
+}
+
+div>p{
+    text-align: center;
 }
 
 /*NUMERITOS CENTRADOS*/
@@ -49,33 +80,57 @@ body{
     justify-content: center;
 }
 .fecha{
-    background-color: rgb(32, 32, 32);
+    background-color: rgb(0, 0, 0);
     color: white;
+}
+
+.colorDorado{
+    background: #9F6303;
+    background: linear-gradient(90deg, rgba(159, 99, 3, 1) 0%, rgba(247, 206, 12, 1) 50%, rgba(159, 99, 3, 1) 100%);
+}
+
+.color-negro{
+    background: #000000;
+    background: linear-gradient(90deg, rgba(0, 0, 0, 1) 0%, rgba(64, 62, 59, 1) 50%, rgba(0, 0, 0, 1) 100%);
+}
+
+.color-rojo{
+    background: #6B0001;
+    background: linear-gradient(90deg, rgba(107, 0, 1, 1) 0%, rgba(194, 29, 32, 1) 50%, rgba(107, 0, 1, 1) 100%);
 }
 
 .donde{
     /*LINEA VIEJA, COLOR MOSTAZA
     background-color: rgb(255, 174, 54);
     */
-    background-color: rgb(197, 175, 104);
-    color: rgb(32, 32, 32);
+    background-color: rgb(107, 0, 1);
+    color: rgb(0, 0, 0);
+}
+
+.regalo>img{
+    margin-bottom: 2rem;
 }
 
 .regalo{
-    background-color: rgb(212, 51, 67);
-    color: white;
+    color: rgb(255, 255, 255);
+    background-color: rgb(0, 0, 0);
+}
+
+.dresscode{
+    background-color: rgb(107, 0, 1);
+    color: rgb(255, 255, 255);
 }
 .confirmar-asistencia{
-    background-color: rgb(230, 230, 230);
+    color: rgb(0, 0, 0);
 }
 
 .que-musica-te-gusta{
-    background-color: rgb(29, 218, 45);
-    color: rgb(32, 32, 32);
+    background-color: rgb(107, 0, 1);
+    color: rgb(255, 255, 255);
 }
 
 
-.fecha, .donde, .regalo, .confirmar-asistencia, .que-musica-te-gusta{
+.fecha, .donde, .regalo, .dresscode, .confirmar-asistencia, .que-musica-te-gusta{
     padding: 3rem;
     display: flex;
     flex-direction: column;
@@ -83,12 +138,15 @@ body{
     align-items: center;
 }
 
-.fecha>h3, .donde>h3, .regalo>h3, .confirmar-asistencia>h3, .que-musica-te-gusta>h3{
-    font-size: 3rem;
-}
+
 
 .icono{
-    width: 20rem;
+    width: 4rem;
+    padding-bottom: 1.5rem;
+}
+
+.invertido{
+    filter: invert(1);
 }
 
 /*VENTANAS*/
@@ -117,6 +175,9 @@ body{
     border: 1px solid #888;
     width: 80%; /* Puede ajustar el ancho según tus necesidades */
     border-radius: 10px;
+}
+.contenido-ventana>p{
+    text-align: left;
 }
 
 .footer{
