--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    min-height: 100vh;
+    min-height: 100dvh;
     flex-direction: column;
     justify-content: center;
 
